src/app/board/board.component.scss
@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
@import url('https://fonts.googleapis.com/css?family=Poppins:900i');


.boxPage {
  width: 100%;
  height: 99vh;
  padding-top: 1vh;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
}

.boxHeader {
  display: flex;
  flex-direction: row;
  justify-content: center;
  font-size: 3vmin;
  font-family: 'Bebas Neue', cursive;
}

.boxContentErrors {
  display: flex;
  flex-direction: row;
  justify-content: center;
  column-gap: 2vmin;
}

.boxError {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 9vmin;
  height: 9vmin;
  border: 3px solid black;
  background-color: #050DFA;
  color: red;
  font-family: 'Roboto', cursive;
  font-weight: bold;
  font-size: 9vmin;
}

.boxContentCategory {
  display: flex;
  justify-content: center;
  color: black;
  font-family: 'Poppins', sans-serif;
  font-size: 2vmin;
}

.boxContent {
  display: flex;
  flex-direction: row;
  justify-content: center;
}

main {
  width: 100%;
  display: grid;
  grid-template-columns: repeat(auto-fit, 5vmin);
  grid-column-gap: 1em;
  justify-content: center;
}

app-letter {
  height: 5vmin;
  border-radius: 0;
}

.boxContentFooter {
  height: 5vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;
}

.wrapper {
  display: flex;
  justify-content: center;
}

.button {
  display: flex;
  padding: 10px 45px;
  text-decoration: none;
  font-family: 'Poppins', sans-serif;
  font-size: 4vmin;
  color: #F8F005;
  background: #050DFA;
  transition: 1s;
  box-shadow: 6px 6px 0 black;
  transform: skewX(-6deg);
  transition: 0.3s;
}

.button:focus {
  outline: none;
}

.button:hover {
   transition: 0.2s;
   box-shadow: 12px 12px 0 black;
   transform: skewX(-4deg);
}

.winAlert {
  color: green;
}

.loseAlert {
  color: red;
}

@media (max-width: 640px) {
  .boxPage {
    justify-content: baseline;
    row-gap: 1vh;
  }
}

